# multi-crypto-exchanges-api

./: .gitignore  Client.py  Dockerfile  Exchange.py  GUI.py  LICENSE  README.md  TWAPOrder.py  TWAP_tester.py  Tester.ipynb  WebSocketManager.py  database_manager.ipynb  docker-compose.yml  import asyncio.py  pyproject.toml  requirements.txt  server.py  test.py  tester.py  twap_tester.py  users.db  websocket_client.py  websocket_server copy.py  websocket_server.py
.gihub/workflow/: ci.yaml  test.yaml
.github/workflows/: test.yaml
Client/: StreamlitClient.py  client.py
Client/Utilities/: Client.py
Server/: Authentification.py  DataBaseManager.py  Dockerfile  Server.py  Websocket.py  server copy.py  users.db
Server/Exchanges/: Binance.py  CoinbasePro.py  Kraken.py  OKX.py  __init__.py
Server/Utilities/: Authentification.py  DataBaseManager.py  SubscriptionManager.py  TWAPOrder.py  users.db
TWAP/: GUI_twap.py  TWAPOrder.py  WebSocketManager.py  client_twap.py  main.py  server_combined.py  server_twap.py  twap_tester.py  users.db
test/: Dockerfile  test_server.py
