[tool.poetry]
name = "multi-exchange-api"
version = "0.1.0"
description = "Multi Crypto Exchange API"
authors = ["Caymaar <julesmourgues@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
pandas = "^2.2.3"
aiohttp = "^3.11.11"
datetime = "^5.5"
fastapi = "0.115.6"
requests = "^2.32.3"
uvicorn = "^0.34.0"
websockets = "^14.1"
certifi = "^2024.12.14"
tabulate = "^0.9.0"
streamlit = "^1.41.1"
keyboard = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
