[project]
name = "api-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.11",
    "fastapi>=0.115.8",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pyjwt>=2.10.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.37",
    "tabulate>=0.9.0",
    "uvicorn>=0.34.0",
    "websocket>=0.2.1",
]
